deploy_python.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-python
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app-python
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-python
    spec:
      containers:
      - name: app-python
        image: redis_python:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
