service_1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-1
spec:
  type: ClusterIP
  selector:
    app: nginx-1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
