service_2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-2
spec:
  type: ClusterIP
  selector:
    app: nginx-2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
