ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /service1
        pathType: Prefix
        backend:
          service:
            name: nginx-service-1
            port:
              number: 80
      - path: /service2
        pathType: Prefix
        backend:
          service:
            name: nginx-service-2
            port:
              number: 80
